--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "deployment-exercise",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "8.11.2"
+  },
   "main": "index.js",
   "scripts": {
     "build-client": "webpack -p",
@@ -19,7 +22,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.9",
     "pg": "^7.4.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
